# PythIA

./: .gitignore  Benchmarks_along_the_way.md  README.md  REALISATION.md  SCOPE.md  pyproject.toml  requirements.txt
benchmarks/omniparser_mode1_oneframe_ocrfix2/: ui_state_1769892525549.json
benchmarks/omniparser_mode3_oneframe/: ui_state_1769888138444.json
benchmarks/step2A_20260130_153252/: ui_state_1769776376057.json  ui_state_1769776377333.json  ui_state_1769776378789.json  ui_state_1769776380148.json  ui_state_1769776381417.json  ui_state_1769776382746.json  ui_state_1769776384317.json
benchmarks/step2A_20260130_154012/: ui_state_1769776815831.json  ui_state_1769776817197.json  ui_state_1769776818412.json  ui_state_1769776819530.json  ui_state_1769776820667.json  ui_state_1769776821806.json  ui_state_1769776822989.json  ui_state_1769776824065.json
benchmarks/step2B_20260130_162823/: ui_state_1769779724564.json  ui_state_1769779730241.json
examples/: capture_demo.py  run_api.py  step2_baseline.py  step2_groundingdino.py  step2_omniparser.py
pythia/: __init__.py
pythia/api/: app.py
pythia/capture/: __init__.py  file_source.py  frame_buffer.py  pipeline.py  preprocess.py  screen_source.py  types.py  video_source.py
pythia/vision/: __init__.py  baseline.py  groundingdino.py  omniparser.py
